--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 	<style type="text/css" href="./css/style.css"></style>
 </head>
 <body>
-<div class="main"></div>
+<div class="main">Time to Style</div>
 <script type="text/javascript" src="/bundle.js"></script>
 </body>
 </html>
