[HTML] Title and Navigation components created

--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!--[if lt IE 9]>
+  <script src="dist/html5shiv.js"></script>
+<![endif]-->
+
 	<title></title>
 	<style type="text/css" href="./css/style.css"></style>
 </head>
 <body>
-<div class="main">Time to Style</div>
+<div class="main"></div>
 <script type="text/javascript" src="/bundle.js"></script>
 </body>
 </html>
