[Features] SCSS for nav bar

--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css" >
 <!--[if lt IE 9]>
   <script src="dist/html5shiv.js"></script>
 <![endif]-->
 
-	<title></title>
-	<style type="text/css" href="./css/style.css"></style>
+	<title>Raffle Waffle</title>
 </head>
 <body>
 <div class="main"></div>
