--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" href="css/style.css" >
+	<link rel="stylesheet" type="text/css" href="styles/css/reset.css">
+	<link rel="stylesheet" href="styles/css/style.css" >
 <!--[if lt IE 9]>
   <script src="dist/html5shiv.js"></script>
 <![endif]-->
