--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class="main"></div>
+<div id="test"></div>
 <script type="text/javascript" src="/bundle.js"></script>
 </body>
 </html>
